--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,11 @@
 :root {
     --grisClaro: #f7f7f7;
+    --blanco: #ffffff;
 }
 
-html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-}
+html { font-size: 62.5%; box-sizing: border-box; }
 
-*, *:before, *:after {
-    box-sizing: inherit;
-}
+*, *:before, *:after { box-sizing: inherit; }
 
 html, body {
     overflow-x: hidden; /* evita scroll horizontal */
@@ -29,39 +25,44 @@ body {
     padding: 0;
 }
 
-p {
-    font-size: 1.8rem;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: start;
-}
+p { font-size: 1.8rem; font-family: Arial, Helvetica, sans-serif; text-align: start; }
 
-a {
-    color: #3498db;
-    text-decoration: none;
-}
+a { color: #3498db; text-decoration: none; }
 
-h1, h2, h3 {
-  text-align: center;
-}
-h1 { font-size: 4rem; }
+h1 { font-size: 6.4rem; }
 h2 { font-size: 3.2rem; text-align: start; }
 h3 { font-size: 2.4rem; }
 
-.contenedor {
-    padding: 2rem;
-    background-color: #fff;
+/* Header */
+.header-bg {
+    /* para imagenes de fondo */
+    background-image: url(../img/hero-bg.png);
+
+    /* para que la imagen no se repita */
+    background-repeat: no-repeat;
+
+    /* para tomar todo el ancho disponible */
+    background-size: cover;
+    height: 45rem;
+
+    /* el padre siempre debe tener posición relativa para que el hijo se pueda posicionar de forma absoluta */
+    position: relative;
 }
 
-.contenedor p {
-    text-align: center;
-    font-size: 2rem;
+.contenido-header {
+    position: absolute;
+    background-color: rgb(0 0 0 / 50%);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .nav-grid {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    align-items: center;
     gap: 1rem;
+    padding: 2.5rem;
 }
 
 nav {
@@ -70,13 +71,33 @@ nav {
     gap: 5rem;
 }
 
+nav a {
+    color: var(--blanco);
+    font-weight: bold;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+}
+
+.contenido-header p { text-align: center; font-size: 3rem; margin: 0; color: var(--blanco);}
+.contenido-header h1 { text-align: center; margin: 0; color: var(--blanco);}
+
+/* Global: Redes sociales */
 .redes-sociales {
     display: flex;
     justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
+    gap: 4rem;
 }
 
+.contenido-hero {
+    padding: 5rem;
+}
+
+/* Header: Redes sociales */
+.contenedor .redes-sociales {
+    margin-top: 4rem;
+}
+
+/* Main */
 .contenedor-principal {
     display: grid;
     grid-template-columns: 1fr 30rem; /* contenido ocupa todo el ancho, sidebar fijo a 300px */
@@ -108,7 +129,6 @@ nav {
 
 .contenido p {
     line-height: 1.5;
-    font-size: 1.8rem;
     color: rgb(51, 51, 51);
     margin: 0 0 2rem 0;
     margin-bottom: 20px;
@@ -147,4 +167,25 @@ iframe, img {
     .contenedor-principal {
         grid-template-columns: 1fr; /* se apilan */
     }
+
+    /* Header */
+.header-bg {
+    /* para imagenes de fondo */
+    background-image: url(../img/hero-bg.png);
+
+    /* para que la imagen no se repita */
+    background-repeat: no-repeat;
+
+    /* para tomar todo el ancho disponible */
+    background-size: cover;
+    height: 60rem;
+
+    /* el padre siempre debe tener posición relativa para que el hijo se pueda posicionar de forma absoluta */
+    position: relative;
+}
+}
+
+footer {
+    margin: 0 auto;
+    padding: 2rem;
 }
