--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 :root {
     --grisClaro: #f7f7f7;
     --blanco: #ffffff;
+    --rosaFuerte: #b60f2b;
+    --textoAccesible: #5F5F5F;
 }
 
 html { font-size: 62.5%; box-sizing: border-box; }
@@ -23,15 +25,20 @@ body {
     background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
     margin: 0;
     padding: 0;
+    color: var(--textoAccesible);
 }
 
-p { font-size: 1.8rem; font-family: Arial, Helvetica, sans-serif; text-align: start; }
+p { font-size: 1.8rem; font-family: Arial, Helvetica, sans-serif; }
 
 a { color: #3498db; text-decoration: none; }
 
-h1 { font-size: 6.4rem; }
-h2 { font-size: 3.2rem; text-align: start; }
-h3 { font-size: 2.4rem; }
+h1 { font-size: 6.4rem; margin-bottom: 1rem; }
+h2 { font-size: 3.2rem; margin: 0; margin-bottom: 0;}
+h3 { font-size: 2.4rem; margin: 0; margin-bottom: 1rem;}
+
+img {
+    max-width: 100%;
+}
 
 /* Header */
 .header-bg {
@@ -54,7 +61,7 @@ h3 { font-size: 2.4rem; }
     background-color: rgb(0 0 0 / 50%);
     width: 100%;
     min-height: 100%;   /* se adapta al contenido */
-    height: auto;       /* deja crecer el header */
+    height: auto; /* deja crecer el header */
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -71,6 +78,8 @@ h3 { font-size: 2.4rem; }
 nav {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    text-align: center;
     gap: 6rem;   /* menos espacio entre enlaces */
     white-space: nowrap; /* evita que los enlaces bajen de línea */
 }
@@ -112,6 +121,7 @@ nav a {
     max-width: 100%; /* asegura que nunca se limite */
     margin: 0;
     align-items: start; /* Asegura que sidebar y contenido comiencen arriba */
+    color: var(--textoAccesible);
 }
 
 .contenido {
@@ -131,11 +141,23 @@ nav a {
     word-break: break-word;      /* asegura que las palabras largas no desborden */
 }
 
+.contenido article {
+    display: flex;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: center;
+    margin-bottom: 6rem;
+}
+
+.contenido img {
+    height: 25rem;
+    border-radius: 3rem;
+}
+
 .contenido p {
     line-height: 1.5;
     color: rgb(51, 51, 51);
-    margin: 0 0 2rem 0;
-    margin-bottom: 20px;
+    margin-top: 0;
 }
 
 .sidebar {
@@ -143,6 +165,11 @@ nav a {
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
 }
 
 .sidebar .foto-perfil {
@@ -161,10 +188,6 @@ nav a {
     transform: scale(1.05);
 }
 
-iframe, img {
-    max-width: 100%;
-}
-
 @media (max-width: 768px) {
     .contenedor-principal {
         grid-template-columns: 1fr; /* se apilan */
@@ -173,6 +196,29 @@ iframe, img {
     nav {
         gap: 6rem;
         align-items: center;
+    }
+
+    .sidebar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+        padding: 5rem;
+        text-align: center;
+    }
+
+    .contenido article {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .contenido p {
+        margin-bottom: 0;
+    }
+    .contenido img {
+        min-width: 30%;
+        width: 30.8rem;
+        height: 40rem;
     }
 }
 
@@ -201,11 +247,19 @@ iframe, img {
     .descripcion-blog p {
         font-size: 3.5rem;
     }
+
+    iframe {
+        max-width: 100%;
+    }
 }
 
 footer {
-    margin: 0 auto;
     padding: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.9rem;
 }
 
 footer p {
